<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright (C) 2017 Popular Movies, Stage 2

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="3dp"
    app:cardElevation="5dp"
    android:layout_margin="4dp">

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/content_descriptor"
            android:src="@mipmap/ic_launcher" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margrinTop_five"
            android:layout_below="@id/iv_poster" />

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/divider"
            android:ellipsize="end"
            android:fontFamily="@font/nexabold"
            android:maxLines="1"
            android:paddingEnd="@dimen/margrinTop_five"
            android:paddingStart="@dimen/margrinTop_five"
            android:text="@string/placeHolder_text_title"
            android:textColor="@android:color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/tv_movie_title"
            android:fontFamily="@font/nexlight"
            android:paddingBottom="@dimen/margrinTop_five"
            android:paddingEnd="@dimen/margrinTop_five"
            android:paddingStart="@dimen/margrinTop_five"
            android:text="@string/placeHolder_text_year"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/num_of_votes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/tv_movie_title"
            android:fontFamily="@font/nexlight"
            android:gravity="end"
            android:paddingBottom="@dimen/margrinTop_five"
            android:paddingEnd="@dimen/margrinTop_five"
            android:paddingStart="@dimen/margrinTop_five"
            android:text="@string/placeHolder_text_vote"
            android:textSize="12sp" />

        <RatingBar
            android:id="@+id/rating_bar"
            style="@android:style/Widget.DeviceDefault.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_movie_title"
            android:layout_toStartOf="@id/num_of_votes"
            android:numStars="@dimen/num_of_stars"
            android:rating="4.1"
            android:layout_marginEnd="3dp"
            android:layout_marginStart="1dp"
            android:stepSize="0.1" />

        <TextView
            android:id="@+id/rating_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_movie_title"
            android:layout_marginStart="8dp"
            android:layout_toStartOf="@id/rating_bar"
            android:fontFamily="@font/nexlight"
            android:text="@string/placeHolder_text_rating"
            android:textSize="12sp" />
    </RelativeLayout>

</android.support.v7.widget.CardView>