<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright (C) 2017 Popular Movies, Stage 2

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margrinTop_five"
        android:paddingRight="@dimen/margrinTop_five">

        <ImageView
            android:id="@+id/iv_backdrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/year_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingTop="@dimen/margrinTop_five"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            tools:text="@string/placeHolder_text_year" />

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/year_details"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            tools:text="Android Lollipop" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="bottom"
            android:paddingBottom="@dimen/padding_left_or_right"
            android:paddingTop="@dimen/padding_left_or_right">

            <TextView
                android:id="@+id/rating_score_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/margrinTop_five"
                tools:text="@string/placeHolder_text_rating" />

            <RatingBar
                android:id="@+id/rating_bar_detail"
                style="@style/Base.Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:paddingRight="@dimen/margrinTop_five"
                android:rating="4" />

            <TextView
                android:id="@+id/num_of_votes_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/placeHolder_text_vote" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>