<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright (C) 2017 Popular Movies, Stage 2

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_backdrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_black"
        android:paddingBottom="@dimen/height_width_thirty"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/year_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:fontFamily="@font/nexlight"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            tools:text="@string/placeHolder_text_year" />

        <TextView
            android:id="@+id/title_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/year_details"
            android:layout_marginBottom="-4dp"
            android:ellipsize="end"
            android:fontFamily="@font/nexabold"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            tools:text="Android Lollipop" />

        <TextView
            android:id="@+id/num_of_votes_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/nexlight"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            tools:text="@string/placeHolder_text_vote" />

        <RatingBar
            android:id="@+id/rating_bar_detail"
            style="@style/Base.Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@id/num_of_votes_detail"
            android:numStars="5"
            android:paddingEnd="@dimen/margrinTop_five"
            android:rating="4" />

        <TextView
            android:id="@+id/rating_score_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@id/rating_bar_detail"
            android:fontFamily="@font/nexlight"
            android:paddingEnd="@dimen/margrinTop_five"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            tools:text="@string/placeHolder_text_rating" />

        <TextView
            android:id="@+id/vote_average_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/rating_score_detail"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/nexlight"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            tools:text="10/10" />

        <!--<Button
            android:id="@+id/favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textSize="10sp"
            android:textColor="@android:color/white"
            android:background="@drawable/favor_btn_bg"
            android:minWidth="16dp"
            android:minHeight="16dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="16dp"
            android:textAllCaps="false"
            android:paddingStart="16dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="@string/button_text" />-->

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:src="@drawable/ic_star_border"/>

    </RelativeLayout>

</RelativeLayout>